syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantResume{
	rpc GetApplicantResume(AppResumeIdRequest) returns (AppResumeProto);
    rpc GetAllApplicantResume(google.protobuf.Empty) returns (AppResumeArray);
	rpc CreateApplicantResume(AppResumeArray) returns(google.protobuf.Empty);
	rpc UpdateApplicantResume(AppResumeArray) returns (google.protobuf.Empty);
	rpc DeleteApplicantResume(AppResumeArray) returns (google.protobuf.Empty);
}

message AppResumeIdRequest{
	string Id = 1;
}

message AppResumeProto{
        string Id = 1;
        string Applicant = 2;
		string Resume = 3;
        google.protobuf.Timestamp LastUpdated = 4;
}
message AppResumeArray{
    repeated AppResumeProto AppResume = 1;
}